[gd_scene load_steps=16 format=3 uid="uid://dktf2oe0yrl5n"]

[ext_resource type="Script" path="res://levels/gallery/gallery.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://v78tn7kef0w2" path="res://levels/gallery/assets/brick_1.png" id="2_d23av"]
[ext_resource type="PackedScene" path="res://levels/gallery/lever.tscn" id="3_ngd8j"]
[ext_resource type="Texture2D" uid="uid://b4pclbd25fpv7" path="res://levels/gallery/assets/brick_2.png" id="3_upsi4"]
[ext_resource type="Texture2D" uid="uid://c7qdfgj06emye" path="res://levels/gallery/assets/brick_3.png" id="4_ndlld"]
[ext_resource type="Texture2D" uid="uid://cf1ap674s585y" path="res://levels/gallery/assets/frame_2.png" id="7_8r3mt"]
[ext_resource type="Texture2D" uid="uid://cxqa2h8qkf0fa" path="res://levels/gallery/assets/frame_4.png" id="8_2t60i"]
[ext_resource type="Texture2D" uid="uid://ilmx6fu4p2hb" path="res://levels/gallery/assets/frame_3.png" id="8_to1ep"]
[ext_resource type="PackedScene" uid="uid://but4mdcfwx6vr" path="res://levels/gallery/frame.tscn" id="9_eq58k"]

[sub_resource type="Gradient" id="1"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("1")
width = 1100
height = 1100

[sub_resource type="Gradient" id="Gradient_v0t7y"]
colors = PackedColorArray(0.577009, 0.577008, 0.577009, 1, 0.111197, 0.111197, 0.111197, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j8fqu"]
gradient = SubResource("Gradient_v0t7y")
width = 1000
height = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_psgh6"]
size = Vector2(369, 250)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y48uv"]
size = Vector2(308.571, 397.143)

[node name="Level1" type="Node"]
script = ExtResource("1")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(384, 512)
texture = SubResource("2")

[node name="Brick1" type="Sprite2D" parent="Background"]
position = Vector2(-275, -434)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_d23av")

[node name="Brick2" type="Sprite2D" parent="Background"]
position = Vector2(71, -395)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_upsi4")

[node name="Brick3" type="Sprite2D" parent="Background"]
position = Vector2(-229, 138)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ndlld")

[node name="Brick4" type="Sprite2D" parent="Background"]
position = Vector2(262, 287)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ndlld")
flip_h = true
flip_v = true

[node name="WallFloorDivider" type="Sprite2D" parent="Background"]
position = Vector2(-1, 366)
texture = SubResource("GradientTexture2D_j8fqu")

[node name="FramePositions" type="Node2D" parent="."]

[node name="SingleFrame" type="Node2D" parent="FramePositions"]

[node name="Entry" type="Node2D" parent="FramePositions/SingleFrame"]

[node name="1" type="Node2D" parent="FramePositions/SingleFrame/Entry"]
position = Vector2(-192, 320)

[node name="Visible" type="Node2D" parent="FramePositions/SingleFrame"]

[node name="1" type="Node2D" parent="FramePositions/SingleFrame/Visible"]
position = Vector2(384, 256)

[node name="Exit" type="Node2D" parent="FramePositions/SingleFrame"]

[node name="1" type="Node2D" parent="FramePositions/SingleFrame/Exit"]
position = Vector2(960, 320)

[node name="TwoFrames" type="Node2D" parent="FramePositions"]

[node name="Entry" type="Node2D" parent="FramePositions/TwoFrames"]

[node name="1" type="Node2D" parent="FramePositions/TwoFrames/Entry"]
position = Vector2(-420, 320)

[node name="2" type="Node2D" parent="FramePositions/TwoFrames/Entry"]
position = Vector2(-192, 320)

[node name="Visible" type="Node2D" parent="FramePositions/TwoFrames"]

[node name="1" type="Node2D" parent="FramePositions/TwoFrames/Visible"]
position = Vector2(213, 258)

[node name="2" type="Node2D" parent="FramePositions/TwoFrames/Visible"]
position = Vector2(561, 258)

[node name="Exit" type="Node2D" parent="FramePositions/TwoFrames"]

[node name="1" type="Node2D" parent="FramePositions/TwoFrames/Exit"]
position = Vector2(960, 320)

[node name="2" type="Node2D" parent="FramePositions/TwoFrames/Exit"]
position = Vector2(1180, 320)

[node name="ThreeFrames" type="Node2D" parent="FramePositions"]

[node name="Entry" type="Node2D" parent="FramePositions/ThreeFrames"]

[node name="1" type="Node2D" parent="FramePositions/ThreeFrames/Entry"]
position = Vector2(-640, 320)

[node name="2" type="Node2D" parent="FramePositions/ThreeFrames/Entry"]
position = Vector2(-420, 320)

[node name="3" type="Node2D" parent="FramePositions/ThreeFrames/Entry"]
position = Vector2(-192, 320)

[node name="Visible" type="Node2D" parent="FramePositions/ThreeFrames"]

[node name="1" type="Node2D" parent="FramePositions/ThreeFrames/Visible"]
position = Vector2(143, 257)

[node name="2" type="Node2D" parent="FramePositions/ThreeFrames/Visible"]
position = Vector2(384, 256)

[node name="3" type="Node2D" parent="FramePositions/ThreeFrames/Visible"]
position = Vector2(626, 256)

[node name="Exit" type="Node2D" parent="FramePositions/ThreeFrames"]

[node name="1" type="Node2D" parent="FramePositions/ThreeFrames/Exit"]
position = Vector2(960, 320)

[node name="2" type="Node2D" parent="FramePositions/ThreeFrames/Exit"]
position = Vector2(1180, 320)

[node name="3" type="Node2D" parent="FramePositions/ThreeFrames/Exit"]
position = Vector2(1404, 320)

[node name="Portraits" type="Node2D" parent="."]

[node name="Portrait1" parent="Portraits" instance=ExtResource("9_eq58k")]
position = Vector2(-189.55, -224.75)
scale = Vector2(0.7, 0.7)

[node name="CollisionShape2D" parent="Portraits/Portrait1/ClickArea" index="0"]
position = Vector2(0.428558, -3.92859)
scale = Vector2(1, 1)

[node name="Portrait2" parent="Portraits" instance=ExtResource("9_eq58k")]
position = Vector2(197.45, -224.75)
scale = Vector2(0.7, 0.7)
texture = ExtResource("7_8r3mt")

[node name="ImageBoundaries" parent="Portraits/Portrait2" index="0"]
polygon = PackedVector2Array(-159, -101, 189, -114, 193, 120, -159, 134)

[node name="CollisionShape2D" parent="Portraits/Portrait2/ClickArea" index="0"]
position = Vector2(16.5, 8)
shape = SubResource("RectangleShape2D_psgh6")

[node name="Portrait3" parent="Portraits" instance=ExtResource("9_eq58k")]
position = Vector2(589.45, -224.75)
scale = Vector2(0.7, 0.7)
texture = ExtResource("8_to1ep")

[node name="ImageBoundaries" parent="Portraits/Portrait3" index="0"]
polygon = PackedVector2Array(-149, -186, 112, -173, 140, 188, -129, 186)

[node name="CollisionShape2D" parent="Portraits/Portrait3/ClickArea" index="0"]
position = Vector2(-4.5, 7)
shape = SubResource("RectangleShape2D_y48uv")

[node name="Portrait4" parent="Portraits" instance=ExtResource("9_eq58k")]
position = Vector2(937.45, -224.75)
scale = Vector2(0.7, 0.7)
texture = ExtResource("8_2t60i")

[node name="ImageBoundaries" parent="Portraits/Portrait4" index="0"]
polygon = PackedVector2Array(-117.786, -147.5, 95.0715, -154.643, 113.643, 156.786, -109.214, 163.929)

[node name="CollisionShape2D" parent="Portraits/Portrait4/ClickArea" index="0"]
position = Vector2(-4.92859, -0.357147)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_y48uv")

[node name="Lever" parent="." instance=ExtResource("3_ngd8j")]
position = Vector2(381, 928)
is_blocked = true
max_drag_length = 250.0
max_rotation = 75.0
rotation_easing = 1.81886

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -70.0
offset_right = 104.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Press ESC to return to Map"
fit_content_height = true

[connection signal="triggered" from="Lever" to="." method="_on_Lever_triggered"]

[editable path="Portraits/Portrait1"]
[editable path="Portraits/Portrait2"]
[editable path="Portraits/Portrait3"]
[editable path="Portraits/Portrait4"]
